build: Set properties for MySQL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,14 @@ mp.messaging.incoming.validated-text.auto.offset.reset=earliest
 
 # Configuration for outgoing messaging
 mp.messaging.outgoing.new-blog.connector=smallrye-kafka
-mp.messaging.outgoing.new-blog.topic=new-blogr
+mp.messaging.outgoing.new-blog.topic=new-blog
+
+# Configuration for MySQL
+quarkus.hibernate-orm.database.generation=drop-and-create
+%dev,prod.quarkus.datasource.username=dbuser
+%dev,prod.quarkus.datasource.password=dbuser
+%dev.quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/blogdb
+%prod.quarkus.datasource.jdbc.url=jdbc:mysql://blog-mysql:3306/blogdb
+
+# Configuration for Swagger UI
+quarkus.swagger-ui.always-include=true
