build: Set properties for production, containerization, kafka

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+# Configuration for Kafka
+%dev.kafka.bootstrap.servers=localhost:9092
+%prod.kafka.bootstrap.servers=redpanda:9092
+
 # Configuration for incoming messaging
 mp.messaging.incoming.validated-text.connector=smallrye-kafka
 mp.messaging.incoming.validated-text.topic=validated-text
@@ -12,7 +16,11 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 %dev,prod.quarkus.datasource.username=dbuser
 %dev,prod.quarkus.datasource.password=dbuser
 %dev.quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/blogdb
-%prod.quarkus.datasource.jdbc.url=jdbc:mysql://blog-mysql:3306/blogdb
+%prod.quarkus.datasource.jdbc.url=jdbc:mysql://mysql-blog:3306/blogdb
 
-# Configuration for Swagger UI
+# Configuration for Production
 quarkus.swagger-ui.always-include=true
+quarkus.http.port=9090
+
+# Configuration for Containerization
+quarkus.container-image.name=quarkus-backend
