feat(boundry): Add kafka messaging for comment validation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,13 +7,16 @@ mp.messaging.incoming.validated-blog.connector=smallrye-kafka
 mp.messaging.incoming.validated-blog.topic=validated-blog
 mp.messaging.incoming.validated-blog.auto.offset.reset=earliest
 
-# mp.messaging.incoming.validated-comment.connector=smallrye-kafka
-# mp.messaging.incoming.validated-comment.topic=validated-comment
-# mp.messaging.incoming.validated-comment.auto.offset.reset=earliest
+mp.messaging.incoming.validated-comment.connector=smallrye-kafka
+mp.messaging.incoming.validated-comment.topic=validated-comment
+mp.messaging.incoming.validated-comment.auto.offset.reset=earliest
 
 # Configuration for outgoing messaging
 mp.messaging.outgoing.new-blog.connector=smallrye-kafka
 mp.messaging.outgoing.new-blog.topic=new-blog
+
+mp.messaging.outgoing.new-comment.connector=smallrye-kafka
+mp.messaging.outgoing.new-comment.topic=new-comment
 
 # Configuration for MySQL
 %dev,prod.quarkus.hibernate-orm.database.generation=drop-and-create
