feat: Generalize kafka message (#2)
* feat(entity): Set max size for comment text length

* refactor(entity): TextMessage to Message

* feat(boundry): Improve kafka emitting for blog validation

* feat(boundry): Add kafka messaging for comment validation

* chore: Update README scope of work

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,16 +3,23 @@
 %prod.kafka.bootstrap.servers=redpanda:9092
 
 # Configuration for incoming messaging
-mp.messaging.incoming.validated-text.connector=smallrye-kafka
-mp.messaging.incoming.validated-text.topic=validated-text
-mp.messaging.incoming.validated-text.auto.offset.reset=earliest
+mp.messaging.incoming.validated-blog.connector=smallrye-kafka
+mp.messaging.incoming.validated-blog.topic=validated-blog
+mp.messaging.incoming.validated-blog.auto.offset.reset=earliest
+
+mp.messaging.incoming.validated-comment.connector=smallrye-kafka
+mp.messaging.incoming.validated-comment.topic=validated-comment
+mp.messaging.incoming.validated-comment.auto.offset.reset=earliest
 
 # Configuration for outgoing messaging
 mp.messaging.outgoing.new-blog.connector=smallrye-kafka
 mp.messaging.outgoing.new-blog.topic=new-blog
 
+mp.messaging.outgoing.new-comment.connector=smallrye-kafka
+mp.messaging.outgoing.new-comment.topic=new-comment
+
 # Configuration for MySQL
-quarkus.hibernate-orm.database.generation=drop-and-create
+%dev,prod.quarkus.hibernate-orm.database.generation=drop-and-create
 %dev,prod.quarkus.datasource.username=dbuser
 %dev,prod.quarkus.datasource.password=dbuser
 %dev.quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/blogdb
