build: Add app properties and healthchecks

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,4 +30,5 @@ quarkus.swagger-ui.always-include=true
 quarkus.http.port=9090
 
 # Configuration for Containerization
+quarkus.container-image.build=true
 quarkus.container-image.name=quarkus-backend
