--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -35,6 +35,12 @@ services:
       - custom-network
     ports:
       - 19092:19092
+    healthcheck:
+      test: ["CMD-SHELL", "rpk cluster health | grep -E 'Healthy:.+true' || exit 1"]
+      interval: 15s
+      timeout: 3s
+      retries: 5
+      start_period: 5s
 
   mysql-blog:
     image: mysql:8.0
@@ -50,6 +56,10 @@ services:
       - custom-network
     ports:
       - 3306:3306
+    healthcheck:
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+      timeout: 20s
+      retries: 10
 
 volumes:
   redpanda: null
